--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdf-image-api",
   "version": "1.0.0",
-  "description": "Extract images from PDF and return base64 using Express",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,6 +9,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "pdf-extract-image": "^1.0.1"
+    "pdf-extract-image": "^0.0.3"
   }
 }
